--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:V6TcvZJAmoGGx7QG1wG+e+vjBWMrl7ezWmWt/B+OWsxuLUUvvQhgQABJL6DX1wBtyUbOUazCPkZwQukiXRdjNXs=,iv:kEeUGDHb5Rp1lf5v3E4IX6vJWs/cftJTDDUGO4zOwz8=,tag:y6ZShcTOtzzjNV5YntwtlA==,type:comment]
-#ENC[AES256_GCM,data:EVA+ad/wR8wR4BLTuUxwv+zpP692ZUXw5Q+RywnFgltwDqAKdII7JV12OFw=,iv:2kWFUTry3mmdE0YhaZlbYhu0lJ/hD2qGssdQpBMz0QI=,tag:CBO3gdZZNF18MVUe4X8K5g==,type:comment]
-VIP: ENC[AES256_GCM,data:yhtVcKRwylpZCwBMvw==,iv:TxbRhvPbEIN5oAJE0sUKloSWyqxpS5myPPI814ngCkg=,tag:to6RlD8/CC1QNtOV2/IIbQ==,type:str]
-#ENC[AES256_GCM,data:wBx+1Nes9YgJ3M631kOagGTxKCwUiPDQOHKx,iv:Pt0LXGYJlce8OU+jumPDApHLtBAiW/O16TUb3yd7d7s=,tag:/Zwfu1TFphY5P5zxMTMl3w==,type:comment]
-#ENC[AES256_GCM,data:rb31cpjHGDuu8vdcybXxuuBBeDOtFhvywOmJEPsJGnztvw7nt1nQn1n3iF3CRBc2abPj+leSVILvgmScdaKoNN7XR9cggZbLP5z1kk/52lkT16UeCl0lVX0=,iv:x8WGfwkLeuZHdv7jm0B+uZZpJ2kMr461eK+YzBU3nb4=,tag:xU901ZSYpBeGlLWM9QV3XA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:1eUm0kw2cX0pKESMxPE=,iv:L6INirNEpPXKZlFhlkRGg+/9AOC+cKjIecTYjlkpu4k=,tag:HMSdnQwR6Av3IIL0FdrXGQ==,type:str]
-#ENC[AES256_GCM,data:IccaZfdApNjq1DA/q+USN5AULosAVwm+9e1gDMantmO2zg==,iv:riLe4ESR+KRy8C3PzMy0oEkLEt1aBoPizWYSGApWTfc=,tag:HBv9KOf5CVecpP4arsERkg==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:0x68KVSSkTiiK45P7g==,iv:Ug/GOxmMe+57utDww56tAo5pjIiqjpPrptBhWSoa01U=,tag:WuC84lipliKJ72gfm2CeyA==,type:str]
-#ENC[AES256_GCM,data:auYSTtXxmmXO9IA5zlgIVXF6ynua/q4BRQ8ujvxGwNARsOI5yyUUvef9Lj6TduQ=,iv:CEgWvpkZii363KxhNpAiBzjhy5yye/Ha6Q1nlQxKOTA=,tag:eMaCvbtCGvgiwU22ARj7cQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:4xioZeP1M4tsObkD9d4a5CXgn/3Phf7MGB/B9XN+cw==,iv:/27npYhHht5HWrBM+tydNeOy6lBCg1xoussSh464dWk=,tag:6ET3v7dx7nYlQSDc5rctzA==,type:str]
-#ENC[AES256_GCM,data:ES62G1vDyr+Jn3UFbSBYj5AiFo/PT+ejf/IUdjOZ7n8q3d0uy+q9YzFNL3BDBe6B1g7TMLmkRHlpdqu1NkoYaPpKmSKLSrgJVKfX77WAUnGukg==,iv:oX8dVytITycDPkSLCRT6jz2HNzXa1pZJv97v1XvLCO4=,tag:mfLrUKGB91tlZUWthZ9xvg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:a1QQVSPEB+2XnxG1kT+y,iv:bRQhykLqRglqAwOH5+cskpuMDH3w21GOC4gmEKD7rdk=,tag:MiK5ouRw546NeTKpz6DBgg==,type:str]
-#ENC[AES256_GCM,data:xPj9xzskD7Ufop2QykKeYLbVshR9gcYGd7Ze40zS9aEa,iv:Ok7rGmFvpSSptKheaSS0hA5jrrtaQSVcuVV6a4GXNUc=,tag:Lm4Nh1wikf73bA0AuRSI7Q==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:ZmBTq3kDg+vniMVsF5L9,iv:hqPh7QMDps2aoDq2Dcfet73nkFB+j3IlDpib+kEZH0c=,tag:GAqYcPGuqXFXli97G/w0fg==,type:str]
-#ENC[AES256_GCM,data:JODD02OxJlmxWNbbw4TII7PO9hyKQSIU7dXV4P3DjspD2C2y3oZpIWWbElxP0XtEyvldEsPrmJftHgR1SYOdJ6EXXtkpkSpGTpn3CI56m/g=,iv:XGnT4GiJKO1hS+eEvL/vcE6zUYSTubMSozAGHR5T5iM=,tag:T+MPBzHaxCrYRODvpDSxMg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:z0fj72eceCaK2GFLlQEY,iv:OXo9BNjDvpZamOyvOgy8dUx14gsD9pOcO4KKEUDto6g=,tag:IeFE406b0hbN6W0L4VYIAA==,type:str]
-#ENC[AES256_GCM,data:78r/uGRfOuqkKyaXwOjG3QjdyaakLCnqiRJl5unvTipFFGpp5ejMiriig36IRa7TAXn8SVDGO3TcyNvR4fJvWE9ua7LHKX7qIEeLfb7CqhGV54x+ftkb,iv:RN12wDs3v97ROVYKB5xWukcQu3xrouHP2g8oR+zJsVE=,tag:K7LpZCYKWTrNQ++OdR7m4Q==,type:comment]
-#ENC[AES256_GCM,data:GeBnQHVAM5uM24L5zOOwwxwdm1Umn0ZxNOHeR8uU0SxhmUx8PjJbIbU6PRQUz/jM7YXcqD8qJhoR6bRuayJYifOI2ImVWf1yzKYltQ8yH+UiiKmY5U2JK+LJto912QXM64tYWAz7cgxHahSawyMrhckiXcG+lBhqzQg7Iw==,iv:jcNzzqQuaXnkTHep7Ybqsayo58CVWnReMb41EYt04oI=,tag:7zopeUHa5T7201YYiLIVpg==,type:comment]
-#ENC[AES256_GCM,data:+54v3Z3TRztkG4P4s8Hx2msz4tg1PI4lUVk7T2h8NiB8T6pZHz7SU//MevJ2MJyJsYvRgljf2sj6ykpsD/GcwPHFXdgUUsGMSAwi3BnUg+g=,iv:9EF/RJNJ+FbPfkceLY0Zgc8eKtHyH9krRFx62gZbxZg=,tag:ldZswDbUDSSMJV5vKWp8Ow==,type:comment]
-#ENC[AES256_GCM,data:Nfx8LTq6njHdLoj1EJ7Ti8VSCVWS5LXAFQEia6hLO6e1tDMrV31XlYc/6LqIjOASVHRPYesn,iv:xsSCT7zj6QsPLIu4JWKVewv4Jg4DkK54ZWih0C3fhN0=,tag:E7ZxCDPC4UWJraARcBxjrw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:CS82VBP+eQePo6wQ,iv:zogLWr0IFMwPtlqSYLisS49a/CjMWqAPcYCASiUwj80=,tag:rG2BSPrV4D07c9EZ1US0vw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:0eRT7B/Y/DetX/zFTMOqA6A=,iv:ntdkvAI3P+y4q3CewIjW4NaHHG3+07R7SAd+RNW6ecI=,tag:HRYOnuWgPc0TlHWu/d26Gg==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:6oV+FRbGiwqrhRU4aIokHCo0CV7s8CV/tK5/Y5+F3ic=,iv:WiSPtg49s5iCAbA0Kc1emAnDZNKb2ZBX+5dOmx7/XLA=,tag:aca3SZ/MfQ0sc22CcZu85g==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:OenLZwl2lgfBnSbP93C+7nroMFXaRfSjW4GyA7kz+XFeOgU+1aMttw==,iv:Q531a+arHXKmMyUQQ911l3P00LY3khQ5jfNiamA18zQ=,tag:kJM5LnlKybCmx3NYEtZGeg==,type:str]
-#ENC[AES256_GCM,data:V8lKv9R/M4Owf7ibnMME7mwak3lWCdiwVr+WFb+lOIhPGvxcvBNU0uq3ucXbZoxkGXudpm7ycfo5BKCOaRkpPw==,iv:7MYa5NtFzBnwkoDohNzPks1nTvJzgWIzF7zwYMvQZk0=,tag:UShx1OvqISBOCE/rSXrMwA==,type:comment]
-#ENC[AES256_GCM,data:+j4xqMfaalO0UHvrkJqpRLMXu1rMTUJq4mIfYnI2YYOkDTrJnlh0Ohq+PUWuKcyH4GaY2lghPqI=,iv:jmafo/KAEZMIvfGPSYJKX3eVSJgoR/7UL7ncL32CMZE=,tag:qyjRf4NzMa9fxUcyvVql+Q==,type:comment]
-#ENC[AES256_GCM,data:WfjVjrg8fLsaxNsVeB5A/P58gPkuQKphKw==,iv:QT/7RRX8Vlr2kaIkavllpLc4LTvbghRDGw3MbDHh+GQ=,tag:LxARK0mv5If9AqTEAigdGA==,type:comment]
-#ENC[AES256_GCM,data:asNOmpnLS22V4Omzl+7IM6x/XCpi3C1pgXE3Yz5rQrIBfj6jq9/wCgcn04bwR20/GgRyYBwvhYnk8+3NlY0Xj0rGw7m/ePuXtb5ofQI=,iv:B6PFyfHdHxYhEZ+vEGBA3LCKeAg5oRWSuoLuvTdQXHM=,tag:XC9nPz5clIAilGY9qx8nig==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:8ef0Ej7WrWwKNIKikq/6j7LeOlc9eMUkCGc/RBlFNgGx+PbSW35Snq5c7uCDekoZ,iv:a1NnwbHfYaf2dsHqiFaRdEQgb3W+exzd3pBMKaSwdDs=,tag:XkjC6qaGPYB1qUZOJONFFw==,type:str]
-#ENC[AES256_GCM,data:Bmu/Hr5q4qrAclahFRgFL1c4poJ41LwboVNynfqx0eVKliQvCeoOOecnrv6rAV+wrmEcBoGUXx4o6Ob0rItdHkFKhCvkg8Q=,iv:GWa17yuw6IxJQuWPVhqtvlRg22pVKcmzLYhmljCTrJo=,tag:736rtJiHlnfwJ1jkQAw78g==,type:comment]
-#ENC[AES256_GCM,data:VwJ0LYNmtTQ+5EqmlXUFLUzQKwm/MNBmACaqmR/2oOv5DGOX0oMTzM8LpjJxe/7HfdvKfOwb,iv:wyYJNuZr6RZkv9QD72/QXXazhGgd1BSFi28dz9R1AbM=,tag:K4BT3HpN/Z40KkBWgOCp7A==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:H3jXqb4/Kw==,iv:FKaBGXdJq9uBbWbhgjqwSZbUm5eXFHoWyrnost9e+Eo=,tag:gwS8RNyE06sCd1oT6DuiCw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:4Q73RN5ujEIHTPgQi8IFYnizusI=,iv:NoJdQCuRfZqS+pxA9j0MDEnE+LRMxGZ6Tg2yEg3waDs=,tag:jfuDmpzUFD5HR++liN6UvQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:PvUQIqbx8FRghgE=,iv:Dxe9svt4XxNAhh+Upuq2tfp+3ymm/O5b27QMR7k9u08=,tag:IBc8d573xvER+WPHqzkRNA==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:c6TKf/KbtHN8nTvOsS/X,iv:C5rJtJjjDsjpoTknQzRFKLFdgyh9MO9vEqlcPPR1y3c=,tag:7BisB6E66hKYz/2wun2dSQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:9kPHDfwWFpgKeYIepFXVK3q2g2KB7oFWzw==,iv:h7vXH1jVmGF2pw/ym+FyH1MUcLZiR04g1qwRUNlEYAY=,tag:UUZiWwY2EVkjOjM+1IaiEg==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:6w82gsLDJDE7W+rYEOforLhrZ0YbM90OQ9YfBGJN1Q==,iv:69A2r79PJnxVbDISjNQj0iERRuWB5nc8ATBJgSKVATY=,tag:6F8JNjpGSUGKCWzF7RBp9Q==,type:str]
-#ENC[AES256_GCM,data:hnSb4c2urklCxKriQelE/0FCAG+wJ71k90QGSzvn5+QWSYtezy8=,iv:qs6fyVlp7dUb6XyYRHwDoZ8odnyhj4+2BuD1BfEl2/k=,tag:+AqSX+DvZsrt1Tdd0P7Wdg==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:6EX8aWmy2Jt3jd817AXQcXzLCck=,iv:o4SE7Vd54NrFXoQY0qc4j12w+RlqwaZXGNieyUDqN2I=,tag:sOl+v00mOW9iTS8aMf78fg==,type:str]
-#ENC[AES256_GCM,data:Mr8qIdKhPab5ZHvXNWc=,iv:VdDve240T8sLLaNTq7eaCXkDYACv8uNS8MU1iW+DQ/A=,tag:vHS4u6uF7ybV08QuMZiyeg==,type:comment]
-PODNET: ENC[AES256_GCM,data:9krbicTUuvKnbgUGLQ==,iv:9zNcLrApI5A3+s+B31KTB7K/MBYAhwHjgemm8uax1Bs=,tag:3GuxPMc9VfJawDUJbBLi6g==,type:str]
-SVCNET: ENC[AES256_GCM,data:7JZmGpK64E1cTlKxCw==,iv:bbKlJQ8QoUIVlRxWzVa8dL7prcInAS9KrF46LJE9Fj0=,tag:SeO/J4mGxCQoqgoOdxB3SQ==,type:str]
+#ENC[AES256_GCM,data:1M7RcN1+xQjdi01rvpH7nokmd+IUD/Rs87EMlzu6g0TgBgcFSOpzh+eGgoQuJDh+ZU5Y5/EZvenFJds9J0MwG20=,iv:VwfO4B0vlYEb+KBH1ZdYdBRc6rnqGcTktzFlybES3Z4=,tag:enrCLUXN904h0bw5wVEhaw==,type:comment]
+#ENC[AES256_GCM,data:EBxhH211LZwCD/leDjIHAH47vQ69aDpv/DxNC+rYpkpOgBb7Y/n3UvrfGaQ=,iv:GisX3qcUAr+GujAsjstVI+QQ7ImMD85xqpsehDP/TIg=,tag:XvZQzvvYcsPf9rKHC9qHxw==,type:comment]
+VIP: ENC[AES256_GCM,data:7Mnb3dOoePg1O7R51w==,iv:WyBpYb0QbIlM7M+bLwmH9yakj8JOodsUDhCz+4Rbgyg=,tag:F3PhXmYXFKG9nVIoaVi7eg==,type:str]
+#ENC[AES256_GCM,data:VqSCr99p4XFF0WUyM3XwyyC99hJmj38zW3Kf,iv:twHLu+61Ca3kvNmzl9/FhIvBC6KA8ES2ma8d3NHO118=,tag:ihgEZ5RSa+NxQNtHVLDLWw==,type:comment]
+#ENC[AES256_GCM,data:G+dejuDJmIQNL06H+csCkd4WJpyDpzdgkmw5A8xFoEVlj0W681gK/+DgR+y6tQ706rlhFYQzkc88PxsG5T1NGDyELiHePXQWbpVVeYc206tJfSZ94+NnA4k=,iv:pRX+3owUTTZLL9EoXIWvL0e/JT9fvsosWGk0ooUVTqs=,tag:91nJCZqebB5FVcmvFKpEXQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:v+yVEVB2JXhE3R1+Xs0=,iv:MueWPV4jMKhc5HMIw54xDG6TsbJ96RHoSbqmfwzgVFc=,tag:RbNKxtXWfcY9WdttaO/HQw==,type:str]
+#ENC[AES256_GCM,data:7jroJa60EunhWux9QzOmzn5q+iN0YFEi2aeE+RDCxxnsUA==,iv:Up4pQ0LVYKEX5WRHydOE87Ee/wxmiGqPxUCotIK/Utk=,tag:xJ5rZv8ajBrgVMomgvZUyw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:tg8uhzeCNbpyebKXiQ==,iv:Tq7Oq+uSlv1/avKelj1tl9ppZOaEt0lvNevdy86DQ/4=,tag:5heDuO1T6J/isbG6yn7fKg==,type:str]
+#ENC[AES256_GCM,data:A6tR+brgzd8JRD3jOkvPu2u/mrNS3VtW5qE11pSFDbLc8uIYRWKc8lArKuIfNyM=,iv:y0p52kJDAA7e9f2nMmduE657bz4vnbtnoCLfHKQy9tU=,tag:TfPDMAVLvJ7MerzMvvZEKw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:TM4egvvNMwJH7iX4/RquMRa3TRqmrou4tCbsqSWkJg==,iv:S54a/nrG+lWadhApiZQc6ShK7J7jLrAI4VdpnDwgfp8=,tag:65D3T83M9Cb0SW7vr6AxCA==,type:str]
+#ENC[AES256_GCM,data:CEbcnGvK8rnYI2QLsIfieR7KBxB1VKBVhjv4zMInPY3JPr52Mob69+4Pyua6taHxcep2QsJ3U8wnxTMRfeFNAhNLqLEalkLcmzFI2WO6EC0wtQ==,iv:jJ35M5MmdOeqBKlaiFnSF29hx3zZeezHOFtkZCQ7f00=,tag:P6E+O00A7bkwcAR2LLEBzw==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:IznZ1aZl84dJYGVpQFzd,iv:ufIgHDTRLxzo6CTK8COEr295E6xRlmgZkm7dgwFOYGY=,tag:5/yS3IMeYPQIcNpNer5/Jw==,type:str]
+#ENC[AES256_GCM,data:qjq9+dmhZWHWZekb6naJIvVEoVTxpW0/RkJyme+gXuZ8,iv:vgI1s036T+6dJ9F9DikBj80EH8rYF6+Tc4P10DjINRs=,tag:LuHrj6GpFZa2wzyOsGPg2Q==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:K/T3Q1xS5NGHcMTOYqYW,iv:6icGz89b6LDlMDV/aDMLlzzaMIJqygFLchJp0MD2VJ4=,tag:Nm4GyB5CggTAoZ4GE7U6rQ==,type:str]
+#ENC[AES256_GCM,data:ytbgDlxQY0sI6nduMZDzqRqr2VRkwAcolrXCOq70BUZ2H6CJGy0jpTHO7LzPIn/BerB5Z7EUCbqdXth1iJw+rHdm4k8fC/+hsujGKlBtH7U=,iv:pGQGkJNR0UZG7JLE4qNyjEB5vcxxLyEIEP8YsWkm5XE=,tag:iPtAXrQmCIqrn7Dety3MGw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:2l8YL+ek6+xWrqKWYlG4,iv:eW2xzxZ1YI3oNLb39i7Fwr7ZllOkegv48dRNPuN26dY=,tag:N8qmImJkStGewcD/1vxtkA==,type:str]
+#ENC[AES256_GCM,data:3UCcoBkKTrfTay2+v6zkPqzJWEA69/EUOoSayL7q4O0R6lWQ7QJXX7Vklv9ky72Hb0hC/tR367ndweu8IndplzvnMvipQFqA2mP2Fb2UtUk7TP97SUa3,iv:/B/zl1rRu9A7+11V6DHVZgeMcc7g2y8fX2x7v8qSJK4=,tag:DB38A5mdjZTMK4mhsmXHFQ==,type:comment]
+#ENC[AES256_GCM,data:oDj9ca6JB24ZYt5MRB3vtX3fMzjYZonO0FD2zrdcnBGaBKa9LPqlF7ouCudh+3riLMPND+fAruErxFrb7kZgSKmRPGMgLjwyZ7Gn+Fb/7lDQ8RNIX6X8vZLH9IFSZ6CI0qZ6Bkg3tbpZNuO241WnV4mBL5BRr31yBPKe2g==,iv:a0Titsv4sp+6bKg5Bga6i3NjFPlRTvL21CJqDWn+iDU=,tag:ftVO6pGs0uXYsDYiLx360w==,type:comment]
+#ENC[AES256_GCM,data:1ifLzQVBnWo8yQ183Lv3sCUxZ5ZOlSpXRW9toZDSoFQ9EH5ttJv3opgtQzuNMgun9nMCsBXizixvH2wybD6PiuKx/bGsgPNQp/FDjZEfrHM=,iv:TgeyrXGtrDlu5YOAlOC9iyv3CyhEZyXNh8YdlS5imTE=,tag:glrDskVCXcLgR229eeqcrA==,type:comment]
+#ENC[AES256_GCM,data:0tJ9fDVf1HhA6QQ4uVB3pPlvwz6v0kWLIGoTwWsH2iTc1zAZtyye2pF5MRZxmM8MJLPkD8K3,iv:mbMz/QdIAH8JxnaoLC7GdBWUSwvIj3TTeoXN1UJn2kI=,tag:Bc6Ujxi8ALRZwWNdkN+/Hg==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:HwPOzV5imvnNnwDn,iv:SQgAnpk6RFXCTSjRCsYsIG6MD2p25Iz3WRQz+UAgy4I=,tag:Dnw1IuHZf8eUXABxWpnQQw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:zyUUznm+B9NSWY66UHvKYOM=,iv:x7VAPvS/Sv7S5Yo+Gw8AdbXzYyfSQ5q0Sqorb31Rdus=,tag:+ciiF679Hdc1wYlPE0hjpg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:zZZl4Obw714W1Ey3Xv9PR46WjTU81J4AA5IEqVCHPsE=,iv:vL+wb2xpY33YdAhFNUUkYj0Eulb5oKL+hFra8cMjscw=,tag:hgy+Ybwd6eXjuyvo0/2DKQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:MtEgrJ0a0wtC/9pRBDT9RkAgjjKau2NCWKaEDioZvQjEgu2UpuSLgQ==,iv:KIY5RWIhDsbf/ql7xGs75EtTfFkTR4GR7al9mxqUqI0=,tag:IHCOKuzuGeEsl3XCTmN8RQ==,type:str]
+#ENC[AES256_GCM,data:HYh5OIAnkbDEI3F9wJMNDHR9S7hdrzJdggskD0XRStP0gQdbrN4BpramKeqNyR0F7U8izJFlNS8YwC8l8HxdLQ==,iv:dg1qs0brBeGQlcFk7vWFo94uU8AB/LPM8t4TMKmmEL8=,tag:yWLc/48FX7jYrYhW6m05FA==,type:comment]
+#ENC[AES256_GCM,data:OfFqkTKuu5dgMYtoLzCX/6qYqPCJJ52o82TVKOGUiEZ8nZAnsXOhFRUXPJPgFHS8IO++CHjY3Xk=,iv:OvTs+8eQ0MGBLtliaBPQK8RGql/LBZQRYMhx6iC8wSs=,tag:X7FnzEfNVxlodByzUFJoOg==,type:comment]
+#ENC[AES256_GCM,data:vyFvQPEeO8yNPFkdbD2fMBWlrxZgGMzJ7g==,iv:nLjApAHW4WBVok8u4fY97A/1i2zRFjEa5OT/y6jOROY=,tag:ZG4d+tpEfMfpXsERjaTStQ==,type:comment]
+#ENC[AES256_GCM,data:fHFYLe7phU5s4iw7iob7+SEAOcSBxzCq1Syvyr+bGoEUoITQG9Rvu6xM/6rru6kniCLEt1PO7E5fQQIY+C+0CLYrgnJvehna63Zj0c4=,iv:sbFN6zUfxln3ZtpYQDazUDHBeIk2Q6Uy//HxJxL6xF8=,tag:92doe/ynUkklLRnMlJI1sw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:mshMWxD42KNl/iw3iEIm/6FM94CqKwNziTec+6YLPmFXU6WRe1yN9Fwd9iDCCUac,iv:a99UBxHDedBmL/OureiV2ae7M+HULm5qacxT9dGUhzU=,tag:ZFYfYvRMIUXxPsM61ITjqw==,type:str]
+#ENC[AES256_GCM,data:o9l/ktcAVsJqL4Fcos+uvqklwDkm8NcGH7J8kGtDBbpzj55eEsLYnJp4UyxyT8tV+74CSRTQv7re51+pIytoMm+dW022AXU=,iv:eBNOMOFsJ1GDmFoiJEwqqWhw4K4FaXjdfGU3XUMa44U=,tag:v8y9D9rPIvohZ9FqOfwtww==,type:comment]
+#ENC[AES256_GCM,data:edY6LqvEJ6sFR9ozAwiJXkCGyp3QT1T5Qkc/gKSoMMguV2l8Jnl0xMo3/1zglpYxOHJT7zNw,iv:ZvJxbBXxHdHAykp4SHoSBp4XRJGd/F0FTlxqyfTpZOc=,tag:gO06qsrgrArSrR5YgkFhJg==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:FRqsyys0LA==,iv:GgYBIPZLjgej+AfexxGz+DfJ0WdgIb9jXHzygbXymlA=,tag:atiG2tRa5XeEsC3tEUiiSA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:8NZdeJ5nv4AX3Tiqy6o1hsymVOU=,iv:XkjLyWd3m7/728+mbnHMUiMO9s8zjcVFrjf6bWcYs8w=,tag:QI5zTcx0uKJvgE36UW2lqQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:Haui8kkyfQ403Ig=,iv:zPXAavQKotanwmhYbp/Z3Y4hDz1GCHSsk5YF5jAtPAA=,tag:XkhzN0zL2iPkYxkNvkpTcw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:Yymm1pkjjcywqfchXxaP,iv:UwbLAksun0oFWA9+zVagu+4XMvqybgqW03xLvdlGh/0=,tag:aT4tnR5EF/ApGVY3y3TUFA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:jqnhEE5TvNxCqvSYyGK4Cl4AHFKfIi8a9Q==,iv:rAk3ghyKjJC0YiB3SypZ6/y6q+ih1tDdMY1J4hzlKhc=,tag:ifu3L0Aasa3Ky9CZ+WXGMQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:JCyI0m/3Izo4Uj7bYN8rk5IHcKgPTlT+Uzz6U1nJqQ==,iv:j4mIPEZtXlro07OVzFfFmqJOX84nNibvsb520F6AwvE=,tag:B4rvGYCMUUqMrr+Q6IdYFQ==,type:str]
+#ENC[AES256_GCM,data:LLxIxJUY2iqg2xNJ9qN0xDjfe3H0dzXRn03h6FHCqMGrbWQyWO4=,iv:VtVBNQO4EL2nyevuvrEuZUymAVgHa4muuGtZkud2kJg=,tag:Jd8WKTmK3liRLJSXz4QDCw==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:yZrbbWsujbBvHucCLRhW9fIS4CQ=,iv:9K0N1OoovehSEacHsLhNXawUgifgx+2S7xcthxd7EoY=,tag:W5J+XOfxTZhlGZJrcrSnLg==,type:str]
+#ENC[AES256_GCM,data:GSw48xZKU1xExNeHDfs=,iv:xikBNtNEUOmRKDLY0ROUOE3b8/k+OC8Zf81fJxcoquM=,tag:BaS4nHhxavmhF8qj9Z1JiA==,type:comment]
+PODNET: ENC[AES256_GCM,data:Gv/oSk0k03YU5sYinw==,iv:I5GIBKYrBvLTEezPig0hxkw0+fR3bSSLlU0jNPGi1+8=,tag:6PEFhe/yRUKdctLz2K8HQQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:wLaTsEfxAPW+ex+XmQ==,iv:3f96yrL5fj4zB6oF2hyqqmrXTd/wDEFfCXHJRoCR598=,tag:f1s1lna4eaoqYAF1/eFDfA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPcjd0b2J2Sk80ajBrb2Zu
-            UVlsRUZGUnJRSHZEUWZqQ3E5V1JxbFBNQ1gwCnZadnpkNWpJTUg0RmhEQ1BGdUNp
-            SmExcHU5Z1QrT3BtQ08rMHdTQXRhWlEKLS0tICtONnYzTkx4MFo4QlU4VTFScE5y
-            L2tFeHpmRG81YjBVQ21pN0VzZXFzSDAK0BekYN5Y/wT5FI7cf4SinU0JVcdY94T1
-            cmnhL4mAD5VNAoMhHZ09n/nOFnSEprWRgeSWEx+Ect+A78yZ0TQCbA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhSHNIaFA4MjU5SWNwZTJO
+            WW03bXIwWTNicmRrN2FHSkpIUDd2VFRlTEdRCldLSG9ydlAwNk5VWlZlaWxFTmhi
+            cmpWOVhsY1ZKY0xWOHVvazRPOXpWOFEKLS0tIFQrZFBjNkRVRnNxSklRZEdFU04r
+            LzA2NEZVV0tUQ09wSjcvUW96N2wrWWsKnX95glHFKqeEvFqM5BsR80v2ddVXDe+y
+            gevbE9kDdmGjOMfxnHyHjpjh9GMQSKNpHU/Gl8akUzQIY+Vzk6Z76g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T08:07:13Z"
-    mac: ENC[AES256_GCM,data:FgWzECGessm9zOpsd/iSbV2QoV4X00TTeuB1lL9dnkylRQXEjpeb6GccrMYMe4q5m6Fx/BHSKIpQ1v0IuCvTeBf192ydxsk7kg9sS54bDVDHeZV3XJiqXz6Bj/KGyO1dW621PtfbuiVLVjhPKkmxKaKGPvMRyuklXipk6/eMiKs=,iv:v3N1V9uU9JhyEoHOJ3E62FRsKLmUe6QtMTPvKsfZ2pM=,tag:U0e1HkJHdkc47q+1Wrk0Fg==,type:str]
+    lastmodified: "2025-03-29T21:50:25Z"
+    mac: ENC[AES256_GCM,data:VjDnzR8ccX5F2N7B6JQoF3cmVgeIkMVM5Ul0KfBrhc4TBMQaxK1tNb+URNZFMKi1+TdrvyiHZMfsnFFKAAIQEomiYKCL4GWgg1Q+9u/z0rsa01Nq9KLG0mRMjP9SUNlc8WePhxvNS6/cYPuFV/3IttQP35VfYGQwJUra3rvnZ4Y=,iv:WvgOvTUAGCkUpZmWhkmaWQquIPrqOhTpw/kzH68gYvg=,tag:b3AinXj4DGGx6W31dO+IPg==,type:str]
     pgp: []
-    version: 3.9.2
+    version: 3.9.4
