--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:ySIYUvU79VMr4B70TIkp8VEPubdLc/0+FzYfcCWPQENRfDC2lRd8mpmCABaVTFFsnu3fH/K8pShQcFGLi3FNgCw=,iv:EwcdSusXIrNnjqXPGmEXLPsnjJFlRrPc0COHKNXoYrw=,tag:IgTDp1oDekCCGHPeLwGkWg==,type:comment]
-    #ENC[AES256_GCM,data:EBpTufXVZ2jkVm27Do6L0CElB1Fz21o2S4PQOVnVHQKIBz+JRrNKSI4GnmA=,iv:3kTUZCn5g09mGOg2cGT/S0nzyAgdFn6E433+ovYrssA=,tag:4RAIbByECWLlrnJ02xhk1A==,type:comment]
-    VIP: ENC[AES256_GCM,data:Eqbwg2542cSU8Mc3Xw==,iv:EgvPA/qLq4yZeCBZvPL/e9uGkQ0RAolvN4DowHECD2c=,tag:fRhqzdpg6NqLD9/MnkoUiA==,type:str]
-    #ENC[AES256_GCM,data:SslzHDg5/76RyZJvsJKJsSDIqaxptICBIaez,iv:+zGyldgou2TWLxlM6AZC9SYdb8Ccs/bzg2W3AQlYmIA=,tag:9ONmIuTVoyiM5LVYTN12/g==,type:comment]
-    #ENC[AES256_GCM,data:wt4ASCSINqnyRvEfIBi/Ld4YxLDRRQbuWXO8DWmBXLiMGpkpsmskTfLyEYkCikoov7kSYW21SfeFI5SxXiwcM89CTGLeulCDYspFkO5KXL8mSq0UYv3ZNZk=,iv:GLlvlMJp0D1mxz2tDVkOTO4Sf3vhttKFehyydCgQ2n0=,tag:wbyzie4IMbfYs1gtF8aPxg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:6Tlvlx6K7IMByTc/bHs=,iv:hUyuKWEtfRhMjAQqWyEmgd/sOgtFJ25XTL2+WCGNbXQ=,tag:QKpKL9VcW6ByBDC+i/5PaQ==,type:str]
-    #ENC[AES256_GCM,data:6+Tk4a2KL4vEFxyX0kaxhvMdg9jDCTceIWL+fIGiqRb2uA==,iv:0Csb6wtNfLF2B7fCEGakCa4q1Jx6idWdcg8XMtwdP3w=,tag:NyLJTEt49ZharlQF4reHDg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:Evq5imYwLgjGJjGUSQ==,iv:o9OWhvpbHVOg+yIMAUxS9Hj+l/qD7hOq62rqsxL4Jew=,tag:+c8xgUI3t7hzabfeWcL9Aw==,type:str]
-    #ENC[AES256_GCM,data:ctGALPf/gwJJVsnp6GYOEaW1zEXuo/eDhM1m4cxao9DZQyI/jxzNDufuULnvzDM=,iv:DdGAY5YwUXILtVGpstl3dJ/13DaBttmg9sw4hOBHbCE=,tag:NcN0iLh2rbvvS3nsWJMwrw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:UwUjv8OgNoMTsYMKm+xOpMP5iuQmRme6PSpsIdMrGw==,iv:Z5T8rgdiFQa8kJz901Wvvzxc09p9vjnHe22nOF7c7nE=,tag:4XxYT6xPinVDwLQBRMvZzQ==,type:str]
-    #ENC[AES256_GCM,data:4+xevNnf3+kqhwusfccF5jmcMNLlfDhQOV/lq21K/HqgxctZHDRM/7UH7gKIYcl1TTHBYbOd8foKanpvIS5NuBJGOiXHpgjWVZJxF9SjHaIQ0g==,iv:0iAaG8Ose4fPBPjpJLllIGa8rBT2aqCcBqSXrOx2AGg=,tag:tQ2jEeqInK+GVnWqmspuJw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:r9+U5KPP+fUFO0shGx6o,iv:En1/vDwnNW2z/ycTfKcmlT1jyqrCAaM346H/FT57Tp4=,tag:3Bc4H6cd96rB4iuyxmzjTQ==,type:str]
-    #ENC[AES256_GCM,data:YJVbPLilrJRAHc/Y43aB3FjonW0jb81w2TOkc9Lb3yJi,iv:khWuFpMBrGT8WmMdlu4GejGj8mOa734jPlpZ5QvblMo=,tag:nwGogUvmRk+fXHPBW07k0A==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:b7A2D6OF5RDXh7GgkcKe,iv:eJD1NtAJAsHRi8T+znWpwfzjasI3soTWbpCNWAZpWpM=,tag:J4CSzC3Lj055d9Pc4o/V0g==,type:str]
-    #ENC[AES256_GCM,data:bKBbeVXdZ7JDbQEPPS2gAonjmUmN+EvyGCbUETf4ijiVU26piasd0+kW9wFLmJL2Tx3AQoQnDsYJMeJAPpUynba8d7pLDjXM8KDG5gUt3Fc=,iv:KXashyEVGh+4TiZC6Zn44gMVmhg1n9SApPl9iheyFso=,tag:lKXTf1UxSzk2pru/PVQVWg==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:q6nWyQQRbX4fY3HBDsqC,iv:IuMxprcqjwERtadPEA+4bm94xeXYAcAoEImC0coEnXo=,tag:kI7dJk9UGjrKo2PPbwtbpA==,type:str]
-    #ENC[AES256_GCM,data:ObqvJMhxhtOsEW+w+8Lu0ySEiD3NLn1UUbY09IG6gi4D7hxX2plh1OZPG+tlehSI1pB8DG2SofsVJgjYGrP1i7c48zli+TRFImqbpenW+4lxSNUqUad1,iv:CuG8/jq3OotF5nRnWcu/+iOph/NUCzBbHWp7kfZqxZQ=,tag:eTxYifl6nDRXAQQBfHFBMw==,type:comment]
-    #ENC[AES256_GCM,data:Ylr3Hcbwl4nuxlIDQ8AFAJNQzrPEBXkQX+DNBaNgrB7Y2cz25ehPXrEvEWQL0kwLn2iw5ccJcuGDtrXZ1OtxiEacz4L//OsKwMXZsan+zvEscLiZDG7VpS/PKd82aC/R59UxkVgZlJLLZZqpolRjGNg54yGuH7CccDuAfA==,iv:Vc0CsD6kxF01NOpAP6FyQwAA3Q9+G28npXlW0l2C2JE=,tag:QJE1gRfhXasYMiSoIqLHFA==,type:comment]
-    #ENC[AES256_GCM,data:/ab9/XyGGGeYkgaYU1mHd9oczJN3j4DNOC1eE8qY35Sc0H5Gr654dvEp6j6tjJgX+v283yASp/fNQaE11tcuEiu0OAaW7niKGjO0SF/oO1M=,iv:9giA/B4d50Af9kqwobHGQrNIqCctDU0Ooj/OEa0V7Ag=,tag:SATJEwMoVIelo1ZYoG0nYw==,type:comment]
-    #ENC[AES256_GCM,data:H4tBqkw6QP545jZCeed0BXZPSaEPyvfZhgE7be/fNkaHSrlHFtx+SeEb1Fv7l7Tq/F/+qhA4,iv:c8aegHjIznQNRdnvcct4gg85Aq549DZqeWuFL1K0B3c=,tag:rtNJ0Z6q0WwhSLJymk6ezw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:xB9up1iNw1IWF7tD,iv:c+aLyjA70w//1TJDdUnJtTiJeP7E+bPfNEG3fer7ji8=,tag:v+VayG8zzt1MR2tBQZNUVw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mTPi6OiJM5QlG+Mx0H4VCUY=,iv:d64AhnHY91+6FqvQTR38RDkC/011ZYNqDrr58ZwXYws=,tag:TCnebY5YTVti9Cp32EpiQw==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:qW1f4Q9S8cN+1WiPBjQs7vHB0limloB9qfGk6+GpNaM=,iv:3J6WO2ioU7VsCqyzSi+BDLqSNYoIJA58LQC060IcsIU=,tag:8IL6yjTazDR8ISWVmZSkDA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:y/KLgXqgZ5MlBl3dTwp/IPLOrxfNrB2D2K8ZWf8RLMiP0OQ2tk63zA==,iv:jmywraZoHc3gV/aBqSs8xx7DV+OiRc4NJLxHXZzTkiM=,tag:wd8DcA6TmdFScq6E+Yk/aA==,type:str]
-    #ENC[AES256_GCM,data:VwI6niwPwsMSXig43hxfYmn0WCnfsKv1e1W+A5kaMXrh6YiExX9g/Odw8s3X6VxyyTtZ5RXrHGVy5og11GNCPQ==,iv:6W+D4JPncf2VvOE6r+P1zSCfXwKPCsm2R5erTe+UeLU=,tag:DxktBvEPZzPwSe1dI290uw==,type:comment]
-    #ENC[AES256_GCM,data:fhbf8bLQ28UtUQL3gjaP2G6ULN3LrRXTN1pkn40+BZwBisDl/ngnL+ET46FDFAgMBEzA9VzheUw=,iv:ZtEZt+K4P55IC4N1A7iQywfOHQxnO02WXuHN6l5rmK8=,tag:vQ+z6aOYFvpgRBJTjHKaxQ==,type:comment]
-    #ENC[AES256_GCM,data:L7mxr6IZHn3pJaH2i0Asr7cr/DMma1IDKQ==,iv:Tu1ltEbE+b/0LHlVtPLQ0+yNax0WNBFbAxbSmM/VPxI=,tag:pPslZLhXsJv8Gu+K6dLDVw==,type:comment]
-    #ENC[AES256_GCM,data:DIwjX+Jk9aogDuSZnQiYORU6xgcyXp4f14+FS8JS9fj35ytx+azFPHzc+8pU5BtlrEBUS7dXH7PBv/NGVlCj/+qGeL4sMTDviG0uC24=,iv:LTBw1li2fzcKc27KJtel57KpzXDEmiK+rN8vQh0efyM=,tag:NShL0MR/kf4WDZAh+6dd8Q==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:dK7mJWNh9jWCxaPYs5eJlMLSz2nNll8Bh97z4T3AzPQW9zfIkQTG4QFyc7NlWwpG,iv:dTZ/mZT28qoHLD1/CQAr0guzcEAAZUrkMqIdS4+awag=,tag:zug78VH3Tvd3HLYlC9dFoA==,type:str]
-    #ENC[AES256_GCM,data:8bh38VcB7LXLhRFig2GlfRWT2DWEgYJgg7N9VUpXSBdqsC0JjEUQk5WMvmQrpHi4HRvQdpLjf0B83pyfXLoeqG2D3jI+r1A=,iv:kSwmxU7j6vpmmt1w6UOchg5D7c//vnax7hN85gme0wo=,tag:Yo5oSl+ZfnTvcnjlPEpDHA==,type:comment]
-    #ENC[AES256_GCM,data:stJ63giWkUE7x+qhzTboouj5VYJVw9z9YnK85Zp8DY7zpKb3sXmtf6RLympNwObmpXkM1lYJ,iv:e3ajPyiJynJUL4+E4DBlIiVI5APJcH/IFuIbZcG6EvQ=,tag:EBbwjqPPJ4P/VwPu9DD7qw==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:bl00bHM0Sg==,iv:NYxCbFyCYiqJpEuxGCW7lzku3ExaR8g48EDV0mMPinA=,tag:tX4RoICc9oj6M13hglgsbA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:3VaM19Szf+u2ee2YcpVWSyeBg7g=,iv:0iyUczKxb3G3j7WH3hgKJPpuKjqcQ+SLzIAFU5Rmejg=,tag:gg+9Eb5FkSVvZCTJhU5iKg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:Ktc5eZ12KkexWoQ=,iv:uv4kGHDnH+KKhj9xHAXebWJw6DGx6hXt/5Y//tyDpTk=,tag:EzGzi9grVOPW6h9vxUSVBg==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:PM6Dr7akbiFo21/JWMGW,iv:jTLFKLiAdFnUtsEjCLFhFz2Il3TAgmLfCP764cHctX8=,tag:ajGrohz3RSbvXDjR9cbe2Q==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:EpfUiG8L1oI68unsVIgnKRnd5WImJG9hgg==,iv:pxuURElziIGTxAPK7mi3npXFZndZ24Qvma5ILs88jto=,tag:B3zoB2TmPuLxruCmDe73hA==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:Fx2TZ3NaWAZYG9pBJHxfBeUiX8nU2QcQEFCul6I+pw==,iv:7AuYaStE5i0EwIzUBDoAp6+oXTHa1wcxZrYBWGJrLCM=,tag:Op2hVEdNoDupHJt/wYCsHA==,type:str]
-    #ENC[AES256_GCM,data:DYSydGH+OkYmXnTMDgyzaH5WashQRCkrtZZKA4M3sCPwPD+m8OU=,iv:bDnbEbKMTLJRj988u/vXspJMqy3VtRYDBqxvu18uRtw=,tag:E/KF2TiG7bOXR1WEmQ9lAA==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:mrub6t7wxCnYVfFp3/LX06z0tTQ=,iv:jc2pRpqISS02Nukiwjwl8aYW8Zhmvk3eU/z0fRz5ewA=,tag:cmBYpsyLe4lxLDjv11c4AA==,type:str]
-    #ENC[AES256_GCM,data:oUQ5ZCVpvJzigyICxCQ=,iv:TdCQRCeywOYURjG5cHzz1hUGOW8kpovL8ikT826efW0=,tag:DHB/lf1FIWQ34Qq2DOd67g==,type:comment]
-    PODNET: ENC[AES256_GCM,data:G5KbcUilF4qk6t76Mg==,iv:xnbVSgFLENr0gA3Uyn8WxE5tngFp00mhNK9AlkRgGAI=,tag:epG4WcQULdY33OOONRVlyw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:3+Ptn1MTOkDvkGsMaA==,iv:bvVymRrkId/7vSkB6O8PQlloSeo8V/oHuj55z/DYc3Y=,tag:NOGZcCP35FPfBclgTCwx5Q==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:Rezflg==,iv:WSv9UKHKeGhQCuSf4hU5c/pJ2mJNUJyj+iTo1cLaetk=,tag:4VyYeMbyudTMDGlqCrPFdw==,type:str]
+    #ENC[AES256_GCM,data:uv5Tl9/8pTtqi0osfVUJmTBgrqaxonuVRf4CtiwdD29l6k4Pi1Y1NBaRcWfafhbUmIW53PKv0/+DVqPq7kiVgfQ=,iv:JLG3dp+l6+NoRILeqTRtjeK9bGC/y3IGJpxBc1lnZLE=,tag:Z8/SJlw778M4WYgtHU0bWg==,type:comment]
+    #ENC[AES256_GCM,data:vsp+uj/M7m3PE2AwrKaQLYRakpWkVGeFvj3CYGknPSdg5VM5XOU1AdHXXbU=,iv:7QJdyBdRuO47CgdpQ5OUp+sKSqD3AuIcHaLO5gUzbNo=,tag:uKNDfMpM+027n6gZd72z/w==,type:comment]
+    VIP: ENC[AES256_GCM,data:7veBccAj88KtxygnMg==,iv:YR0fGZBQCDwccmNC6RqZI3DRd+xdBLbYoRv+/+EtLAM=,tag:7DMdZh+HMZQF7w5jr2zS3g==,type:str]
+    #ENC[AES256_GCM,data:v6UYlDmGeK1PCsBYFV33LXD5dbqmpN1aEq3T,iv:97KzK7ik8S6xIs2SNqTfqP2eNUU+rNjhA1cA7KGSnYg=,tag:LM5WpcgcobpL8Wrdykkq+w==,type:comment]
+    #ENC[AES256_GCM,data:VXmqBn9NiFCHt8sZkVmzw/w5ZjDxOWrGGD6ugjFNhBsG8J6bhizq/Ao3nRjDb6J6TfSr4KNbVm6EL5e1ON9sMXbOXKSQ3NQZHFCMP9Fw6lGd5om8jgnjz/U=,iv:xrb4O5URjHWupckP3kWjxJNNwhvkuAUXTog2Poglfvc=,tag:+dr8bOzdeo4od2F7v/v0gQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:jVglcCRji/8lg3TqM8g=,iv:YtjHTrKF9dUv7QVg6uUULfJylqcZ54oiMMM9Md/jlEw=,tag:ucyHjubGRBgUUs9TE+05aA==,type:str]
+    #ENC[AES256_GCM,data:EdA+gdyktQhoMhmyfeK38aXV/nokhiV1fFhbz+mVq9+ZbQ==,iv:5qQtkbAxSZvs5m5/QraNwGsEaIdYEgpkeYrRmALZiyg=,tag:Zm+0VWosIwAh4khx7/aq+w==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:k7JW5a8Y8VNGDlx7qw==,iv:hHPbWYaImgUbc0cfpoQu71aEpJDUxjFTYuaXdKV90yg=,tag:BgjN2WOwFRNFvehQPJ5ySg==,type:str]
+    #ENC[AES256_GCM,data:bqO2YvtSkb0I3PwRLydM023QiFzCV+Alp8jgQqm9qLT6ElyIM97xvMbrO8c71D0=,iv:uo/zQD5kzQVm72nU0WGef24Fqt4bA+ywBDA5CgNqcOQ=,tag:ZalYmX+nRO5KRcgWezuB1A==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:7pXHw1uDfQOd/IftxrSykTLzCs+5nL8tlSjuxj5smg==,iv:LZemg+FTQU9ljC9kf27hm4jpuczY2z9bhOujPYlPy7Y=,tag:6IvLhcCgDk4HSGAXQjjxYw==,type:str]
+    #ENC[AES256_GCM,data:QTfgektwQzneUsLpHWwZiAJIZ4AQOFQyZvVXMLipnBESw2LU91enRM7RgTbzOVAewQ7kyLxncZaB42W8BKH1Ltz4r8FUWrk019HVJUsL6owU3A==,iv:stDVVpY9gLhUA+VfWqT9/oj8VEm6xVpPeqoxsKfwYTk=,tag:c6w/YroXMOpV2sRFuiYtfw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:LQNqQKRM+PTcqHqon0Mq,iv:zSv5lEs/HrTvphy7oyvQ7B+X46oPxzLIDidHlLV1zFI=,tag:N/zVHoqRGpMJ8mjeyVuibw==,type:str]
+    #ENC[AES256_GCM,data:/u+mi2O+Opdk/jHGzpt6L5roFU6F3FpqbP9HeoSjJpHa,iv:rO3uVV99d3Fny1dgninX3yDbRtDhrU3FRja93LVt+F4=,tag:Zm6YV2bEMoj0p+II0z8NQA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:beOeVNUUSUwcF2cQnYur,iv:O70hUu/ClfZ6rzJ/49jK5gurR/M3VzHrIsvPd8NyUtQ=,tag:m8zPwSYgsUcbawRikpzoAw==,type:str]
+    #ENC[AES256_GCM,data:HHQzLSxsNcI+Q+o895d1xiXDblMfZ3JHZWzp0kgKJ8YeZiojEUp2hgBs9OMiTCFiG9RQvSTfy8BFWzo2dwjK4SnzRn41OEIrm49xTGUeVkw=,iv:DCLQKwm3N7Rnv6K5feNSymxTr1tQj5+MC6kT5lnHN0Q=,tag:heYD7V49ro4/F4F5bagCog==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:5ZCYUYj3XEWHqiQoAeL7,iv:Q0P2/hxNRNq7UZ8tPTJw5vCki13dP81UqP/GzdK1ZPk=,tag:+uYsLmk3YileJKn2jus5BA==,type:str]
+    #ENC[AES256_GCM,data:cuJYg9m9gEWq2llo/Kd+hO6xX+qZaZtGjAaQ7ARe+jW7ybc0h6bL92/8Gh7vP108Z+Dr6FA4iy0qi8r/Fmq+LOVaTJ9J5x/MDgt2BhNT8Zro0MplvjJa,iv:NNjPOCYMD4t3x/DiLwJbeJTOB7my4cRsmDrW4PQh1pM=,tag:ZJo6c3SX7NAhOlMki3NAkQ==,type:comment]
+    #ENC[AES256_GCM,data:KWxsphq6BF7Ck1FxdNGRqYLJeKYDeV4d8DrPeI1OX5ti0ijyQy/getRiC7e/oFJVPoB41HR9iraVr98kW9wcjJj+dZCFI1xbcd3EOvCQlUAIFlBiuO0MkVOO7+IbMo/DBAej6FjwUqbkNdxihv6zwcGVz0wkgicPaN8GZQ==,iv:isuM8Po0CbAc9SxejYGXdkHqIJWSaebgn6N49cvD1EA=,tag:Amo/16X8ZqS0L2itmUnxAA==,type:comment]
+    #ENC[AES256_GCM,data:R6shCAzS8mkvugX26xluI9/Dj83hHfmr1GwSmJrTYlxxYy+aGJthe9b6t35cp16/g7eVITjEG6m/xBiC32m1UEAtOQNdLazjxhAeL9GejnA=,iv:2wtR4GqaySJ8lJ5fdm9E6Se3vcdoJEioPgu0oA4Up68=,tag:0tFcx6GEr+WnO+Mx+TVX0Q==,type:comment]
+    #ENC[AES256_GCM,data:Z+affHduGiY7lfv6h1z60dotBRm7YGb7ycnkuSm2nk1Anv0u/ohzbuUEbn9Q3/b5P7xPXMGt,iv:1cMuO+STdp2pG35FPpOfDjT1ZOL7z3toYQ0tAkHv4kY=,tag:t560OD3kCt0kxt1layDUYQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:TtLwp0Pfqg+i9v06,iv:QKTHvPXxff7K73C/8GSKbnUDHHQpNWhMtdipx2/ntB4=,tag:wLT+r3fIoIC8dx1jNzk1fA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:aIpjoIX4rLeNneiGJQtEzwU=,iv:3uwqnlmleKFD4bZh5gxqvlDMsKptxkB1FWL/8I3mYis=,tag:AzceQojgDfG7RCYDdHzn3w==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:1DyKgDFX6BeGGKHgSIEd2UezW5tMpmWk6SxVbEXpKCw=,iv:/n+NRLfP+IJLt/moJLzoZTHBDtV3xP22JbjudhfgcQ0=,tag:wnQLQcZ4ma7dDw6ZOr8l7Q==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:XTg8bNEX9esG+d47+6ThY8lfQQ7pfvqAfC0sTUt9Zm9tudzR0UFeaQ==,iv:FedUE2TbhQSBjSBscWpvJ7N6HKelDfAu5bmxhvZQ1tk=,tag:Bf95F6zv+YbwCisIz3HO0Q==,type:str]
+    #ENC[AES256_GCM,data:O7Nq0I89Sb2hrBK0oxFyU4TRoWdmSIRqqLxi6XdhddFvhu1RVbM0WJmiToXYiEKK0kAbX6xI3RagIy0FtC69+g==,iv:x3XFUd0zcrs8SiipRHt5Miw3ZwTI3WaPMAOfCinpH/M=,tag:ELkAYwbjKwsdihYynNGzeA==,type:comment]
+    #ENC[AES256_GCM,data:3MVFvPOf2oTkHYnXlaU8LHAf8h0/jQWNK4ajbHGjT6nYyH6Vm6+yGqS98IMNL554ItPu6ByJRuw=,iv:gd8uqD8biu6pS9Y8NUmhdI0cdP6QxqH5yKd0NKlQaso=,tag:/pILRaYxqSlBE3iBbu8t+Q==,type:comment]
+    #ENC[AES256_GCM,data:SXCSqKLutuc8FC8iavd9aEeIoG4EINd4FQ==,iv:iMgAOMeGp2t0pi95/thn/CCFdAXCuJ/9Rv7JbPAQEQg=,tag:VPuvdm68lwD2Li2rK8C+hA==,type:comment]
+    #ENC[AES256_GCM,data:65LVdBh5l6Lz7IFWP+ol1dbY7U64WNovV94uS5PsaG0M4RnleXoTvYB8DZA5zTm9OlTnIbibkrJ2cnOq9hBzS4+F7bVLwkI1NAzAz2U=,iv:x6E/5UZZLK4W34c6MFWUH5Bh/bpaYFwhm/wrbQTjyJ0=,tag:wuCOO7VvaYVAC2KLNb2l2g==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:sBGUj8kuaJf18w2xnxnSedvzV52urmPDXGBwKJxbACcK7KPqA1mpeKOXdOIbH2pP,iv:3oK6nq8KzpgAZsx5bpWxo7AeKEou9EwjF1iv0bykHzA=,tag:bXR/FU/r3XWxGG9s72g2fw==,type:str]
+    #ENC[AES256_GCM,data:pKXjrdsgUn091Byw+02EUVsH1EHwO83F9k6MkX2UyJ5WkgJSyD3TqPvvZBY6RQeMzpgc7KB/HJ71dXWNLTbMLRGPCSgK/18=,iv:xZFtlKTt87cwEAMFqgLcfBWRunVeBdqHKHiaLyKB1Qs=,tag:HFlqaS7tKtTQkpJtJcIZbQ==,type:comment]
+    #ENC[AES256_GCM,data:r+9ro8bVnw/f5nsD5rudEHxyKalBTO+iVNl0iimKBNyHuLV+k0eG2n7+ikMJupl/WubG6p5B,iv:i5wfV6873JMEgeu3KMkMYMrFtANjF7pXiEfTyjUztK8=,tag:kzTNxejWe2luKIBirTalUg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:rd+FEsH4cA==,iv:3roXrsAKVjf3b7TpRsOTARfxMWoKo15U6UfEBBUDq8w=,tag:/tlasC1xUFAcpPYV1Hng9Q==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:0/PEjvQ4ZcEGsKhveuxrceJD6sw=,iv:irBnsmocFWWdU3hnf/VMz6ejJmGBiO+4X8O+J9G9rm0=,tag:0aWLg65/hmyTHwOhWdfwAQ==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:ZOtVprS4Zr7+jRU=,iv:gQTVz/JX6s0vfPBYesOkVCBniPZvLxJLYIlRr09e/Js=,tag:J1Q3jJtRPE8Iyx3xfC9XJQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:y54CPsLXxMA0GnTL37Ph,iv:GNbea6UfIgPvzaK9dVeQK/7bLj/olzr302mNj9QwaYs=,tag:f/WiDenVHPP3K96Znref9Q==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:SEIplOR4MXhGA0KIiyyITVEu/KoivD/F8Q==,iv:cBrTumvAzpWq2+FL0PefSd4OETOCcUS/1jsHJrStdqA=,tag:5mlUiRwOFgsHnCbLjDArww==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:+uMZTNUJjb0FF+0dxrqiuJbbEQRfSvX5lsNp2+Uq8Q==,iv:S3XHCJSF4PFhD8vGcXTHN8VP4DqELT7/vn195sJJrfo=,tag:yVWSclbkGK4x2DILHEj4hQ==,type:str]
+    #ENC[AES256_GCM,data:lyBXH/Ynx0yUlOU85BPwMP1s40BUljoX0ik5+qsJBCC9aKbm/e8=,iv:k5dQX3cg5eb2+i8f1zE9IbrjzRoscr1YunGzd/+AQpY=,tag:+DJf2ZQ+HT6MJDHNN54VEA==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:8K0Oo/iDks11Sf5p6Xeif+T3S9w=,iv:JIKU5twzerOoYHbznv7iPZ3eeR3z+0n08+76PPMovZM=,tag:fq2sK+0/eiw83Q5jsidZTA==,type:str]
+    #ENC[AES256_GCM,data:2H/mYytyx/o7hbINzO4=,iv:3dKqZRFP1jAtNJ50HfYOWYw3LrU+zlzhny+TTcTrmjM=,tag:BX+ilLuR/JumTYCPMPqWpQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:h1zgmlStX/LOBRxaiQ==,iv:tuhpycc8yC1WP/sKgm9UL623eFfFaADm8f9nkQENnvg=,tag:W5oA/7YvoMHUuadyqsSIFQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:+HhGQoFjneKEjntUng==,iv:U5GyjR6qhMUjf6QWC9K+Tnk9gtcRX58n0uBNet9m+x0=,tag:6ndoJkO8BGkMDQ6S8d4cyw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:ld8EQg==,iv:fI88RMtsN7DRcNYFrCzIunKzIDx8Xg7+9rzQ8Sc9t8E=,tag:vLfJMi8H++ZG+w/VvLcP9Q==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwMG1mc0Q1cXJqbVZmcmpV
-            ckdmSUN1VVdGMUwvd2tWWXBTTVh4MU5RVWdRClNaelQzUjRodFBUOHRDbnFndTZS
-            WmU2cm9aUU9mVCttOHRUMXdDdXhJWHcKLS0tIEQ2WWdhb0kwWDlUanFacU5FM2tG
-            MXE3czY5UUoxQjV2aTZYNkU0elhGRHcKjB9cVf5A9TKFznuzHnZmT9t6jAoD3hF8
-            Rj2Fjt8D/fWYRORzrkHmfke593SK4YebW7G7I13ME3J4sRUsLzzfcQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4Yk8weFkwbzhWaFVuVXo1
+            bVUwbFpGSURLSnlCeTVYTWpvTU16dTBySFVBCk4xa1ZObEdZY1FrYjFua25wSnpM
+            VHhTZGdVR1dQREw0VktlcTNpUXVoV3MKLS0tIEN3RFRVbFZ3c0xwVVpJMGdFbzZl
+            WGpPeDFuWDFyRTBvNWZEN2tLOEVoTzgKjAh00Is4FtwRYo20v8UUHRDTGu2bkwne
+            0HGdq/rjxd1CLyXiCpYJouckAnq7p48gHHH+kS03aH8tds4aTw3ZcA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T08:07:13Z"
-    mac: ENC[AES256_GCM,data:ZJYyXwaMWaLtc3W/t5Krp+E21lw5kSy0ZpFv9IzW3EzmrK1KLIgUz067Iuexae0+n1fXyKFu/gpZ6hHg/cqq2SO2v9xNk6kYQluZwMKSQCVWp0tgfUpIIiDwe99E8nOfnl0zaowdJuNHEiHGeW/RSDnCBbdYymdd5D5NWOo4c5g=,iv:69o7HL5gxQYZ1f6xZ7nDFsememZwTrEFHgk1/zuWbwI=,tag:t0XFhCbneHHLQkrgdj1/Ig==,type:str]
+    lastmodified: "2025-03-29T21:50:25Z"
+    mac: ENC[AES256_GCM,data:25nH5qGVcsEQqXogFTgcUQ91F+I8IScu5UxxrZzqyeW0xvI6ddf0I8hFA8CkWwqg0XN9UItiWAoXWxZP0X52UCGZZUKk9mnfamXAH17h1y64rR5PfaiLfXiU7dkSDiTa+lfCYIUW2vZgIdd7peqMar/ceV0k2WHkgu+Q2pmcGa4=,iv:FOcF8dXOq+IMDVMepC70FQ2lktAkYS2Qc/mbsc0MjO4=,tag:yJniJ+D1PgbNOO04UrT87w==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
-    version: 3.9.2
+    version: 3.9.4
